user - role model implemented