@@ -6,12 +6,11 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class MyUserDetails implements UserDetails {
 
-    private User user;
+    private final User user;
 
     public MyUserDetails(User user) {
         this.user = user;
@@ -19,11 +18,8 @@ public class MyUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(
-                new SimpleGrantedAuthority(user.getRole().getName())
-        );
+        return List.of(new SimpleGrantedAuthority(user.getRole().getName()));
     }
-
 
     @Override
     public String getPassword() {
@@ -41,17 +37,17 @@ public class MyUserDetails implements UserDetails {
     }
 
     @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
     public boolean isCredentialsNonExpired() {
         return true;
     }
 
     @Override
     public boolean isEnabled() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
         return true;
     }
 }
